--- a/aivaapi.ini
+++ b/aivaapi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
 module = wsgi:app
 
-master = true
-processes = 4
+master = false
+processes = 1
 
 socket = aivaapi.sock
 chmod-socket = 660
